--- a/Docker-compose.yml
+++ b/Docker-compose.yml
@@ -2,7 +2,7 @@ version: '3.8'
 
 services:
   website:
-    image: dockerhub_username/welcome-webpage:latest
+    image: peupeuv/welcome-webpage:latest
     ports:
       - "8080:80"
     networks:
